traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:12: error: value =- is not a member of Int
      k=-k
       ^